<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Report">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
    >
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        />
        <TextView
            android:id="@+id/getName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/name"
            app:layout_constraintLeft_toLeftOf="@id/getClassification"
        />
        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/getAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/age"
            app:layout_constraintLeft_toLeftOf="@id/getClassification"
            />
        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weightRes"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/age"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/getWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/weight"
            app:layout_constraintLeft_toLeftOf="@id/getClassification"
            />
        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heightRes"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weight"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/getHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/height"
            app:layout_constraintLeft_toLeftOf="@id/getClassification"
            />
        <TextView
            android:id="@+id/index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/index"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/height"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/getIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/index"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@id/getClassification"
            app:layout_constraintTop_toTopOf="@id/index"
            />
        <TextView
            android:id="@+id/classification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classification"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/index"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/getClassification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classification"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@id/classification"
            app:layout_constraintTop_toTopOf="@id/classification"
            android:layout_marginLeft="5dp"
            />
        <Button
            android:id="@+id/newCalculation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newCalculation"
            app:layout_constraintTop_toBottomOf="@id/getClassification"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="150dp"
            android:textSize="20sp"
            android:onClick="newCalc"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>