<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
    >
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        />

        <EditText
            android:id="@+id/editName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="1"
            android:inputType="textPersonName"
            android:textSize="25sp"
            android:ems="13"
            android:maxLength="22"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintLeft_toLeftOf="@id/name"
        />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/editName"
            app:layout_constraintLeft_toLeftOf="@id/editName"
            android:layout_marginTop="25dp"
            />

        <EditText
            android:id="@+id/editAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="1"
            android:inputType="number"
            android:textSize="25sp"
            android:ems="3"
            app:layout_constraintTop_toBottomOf="@id/age"
            app:layout_constraintLeft_toLeftOf="@id/age"
        />

        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="@id/age"
            app:layout_constraintLeft_toRightOf="@id/editAge"
        />

        <EditText
            android:id="@+id/editWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="1"
            android:inputType="numberDecimal"
            android:textSize="25sp"
            android:ems="5"
            app:layout_constraintTop_toBottomOf="@id/weight"
            app:layout_constraintLeft_toLeftOf="@id/weight"
        />

        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="@id/age"
            app:layout_constraintLeft_toRightOf="@id/editWeight"
            />

        <EditText
            android:id="@+id/editHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="1"
            android:inputType="numberDecimal"
            android:textSize="25sp"
            android:ems="5"
            app:layout_constraintTop_toBottomOf="@id/height"
            app:layout_constraintLeft_toLeftOf="@id/height"
        />

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report"
            app:layout_constraintTop_toBottomOf="@id/editAge"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="250dp"
            android:textSize="20sp"
            android:onClick="calculate"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>